# Zerene

./: LICENSE.md  Meanest-test.md  README.md  Stress-tests.md  colab-stress-test.md  contribution.md  info.md  pyproject.toml  usage.md
.github/workflows/: python-ci.yml
docs/rfcs/: RFC-001-matching-engine.md  RFC-002-order-book.md  RFC-003-latency-model.md
tests/: test_hawkes_ofi.py  test_latency.py  test_matching_engine.py  test_models.py  test_modify_order.py  test_orderbook.py  test_pools.py  test_risk.py  test_rl_env.py  test_simulator.py  test_sor_l2.py
zerene/: __init__.py  __main__.py  models.py  pools.py
zerene/analytics/: __init__.py  metrics.py  report.py
zerene/benchmarks/: __init__.py  runner.py  sharded_runner.py
zerene/cli/: __init__.py  __main__.py  main.py
zerene/datasets/: __init__.py  generator.py  loader.py
zerene/engine/: __init__.py  matching_engine.py  stop_manager.py
zerene/examples/: __init__.py  rl_training_demo.py  run_simulation.py
zerene/exchange/: __init__.py  venue.py
zerene/execution/: __init__.py  algos.py  impact.py  router.py
zerene/latency/: __init__.py  gateway.py  models.py
zerene/orderbook/: __init__.py  book.py  level.py  snapshots.py
zerene/risk/: __init__.py  engine.py  limits.py
zerene/simulator/: __init__.py  events.py  market_sim.py
zerene/strategies/: __init__.py  base.py  market_maker.py  mean_reversion.py  momentum.py  rl_env.py  stat_arb.py
